--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "commander": "2.9.0",
+    "multimeter": "^0.1.1",
     "progress": "1.1.8"
   }
 }
