--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cli-table": "^0.3.1",
     "commander": "2.9.0",
     "multimeter": "^0.1.1",
-    "progress": "1.1.8"
+    "progress": "1.1.8",
+    "read": "^1.0.7"
   }
 }
